fix: position on smaller devices

--- a/src/client/components/BBackTop.less
+++ b/src/client/components/BBackTop.less
@@ -1,9 +1,10 @@
 @import (reference) '../styles/custom.less';
+@import (reference) '../styles/modules/variables.less';
 
 .BBackTop {
   position: fixed;
   width: 100%;
-  height: 80px;
+  height: 70px;
   bottom: 0;
   left: 0;
 
@@ -11,6 +12,10 @@
     position: relative;
     margin: 0 auto;
     max-width: 1010px;
+    @media only screen and (max-width: 1200px) {
+      padding: 0 20px;
+    }
+
     &--shifted {
       max-width: 935px;
     }
